# ocrit

./: Cargo.toml  README.md
src/: attribute.rs  main.rs  proximity.rs  typo.rs  words.rs
